lading-page imports

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pretinho Imports - Loja de eletrônicos</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/animation.css">
-    <link rel="stylesheet" href="/assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/animation.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -35,7 +35,7 @@
 
     <main class="container-main">
         <div class="container-main-image">
-            <img src="/assets/img/fundo-background.png" alt="fundo-logo" class="hidden">
+            <img src="assets/img/fundo-background.png" alt="fundo-logo" class="hidden">
             <p class="menu-title-description">Instrumentos de Alta Qualidade e com ótimos preços!</p>
         </div>
 
@@ -48,12 +48,12 @@
 
             </div>
             <div class="imagem_luen">
-                <img src="/assets/img/luen-instrumentos-percusao.png" alt="imagem_luen" class="hidden">
+                <img src="assets/img/luen-instrumentos-percusao.png" alt="imagem_luen" class="hidden">
             </div>
         </section>
         <section class="container-main__imagem">
             <div class="imagem_kadosh">
-                <img src="/assets/img/kadosh-bg.png" alt="imagem_kadosh" class="hidden">
+                <img src="assets/img/kadosh-bg.png" alt="imagem_kadosh" class="hidden">
             </div>
             <div class="description_image__kadosh description">
                 <h1 class="title_kadosh">Microfones <span>KADOSH</span></h1>
@@ -65,46 +65,46 @@
 
         <section class="carrossel__container" id="carrossel">
             <div class="carrossel__sildes">
-                <img src="/assets/img/violoes/pandeiros.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Tambo.png" alt="pandeiros">
-                <img src="/assets/img/violoes/tim__maior.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Timba__medio.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba_branco.png" alt="pandeiros">
+                <img src="assets/img/violoes/pandeiros.png" alt="pandeiros">
+                <img src="assets/img/violoes/Tambo.png" alt="pandeiros">
+                <img src="assets/img/violoes/tim__maior.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba.png" alt="pandeiros">
+                <img src="assets/img/violoes/Timba__medio.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba_branco.png" alt="pandeiros">
 
                 <!-- imagens duplicadas -->
 
-                <img src="/assets/img/violoes/pandeiros.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Tambo.png" alt="pandeiros">
-                <img src="/assets/img/violoes/tim__maior.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Timba__medio.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba_branco.png" alt="pandeiros">
-                <img src="/assets/img/violoes/pandeiros.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Tambo.png" alt="pandeiros">
-                <img src="/assets/img/violoes/tim__maior.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba.png" alt="pandeiros">
-                <img src="/assets/img/violoes/Timba__medio.png" alt="pandeiros">
-                <img src="/assets/img/violoes/timba_branco.png" alt="pandeiros">
+                <img src="assets/img/violoes/pandeiros.png" alt="pandeiros">
+                <img src="assets/img/violoes/Tambo.png" alt="pandeiros">
+                <img src="assets/img/violoes/tim__maior.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba.png" alt="pandeiros">
+                <img src="assets/img/violoes/Timba__medio.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba_branco.png" alt="pandeiros">
+                <img src="assets/img/violoes/pandeiros.png" alt="pandeiros">
+                <img src="assets/img/violoes/Tambo.png" alt="pandeiros">
+                <img src="assets/img/violoes/tim__maior.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba.png" alt="pandeiros">
+                <img src="assets/img/violoes/Timba__medio.png" alt="pandeiros">
+                <img src="assets/img/violoes/timba_branco.png" alt="pandeiros">
             </div>
         </section>
         <section class="carrossel__container" id="carrossel">
             <div class="carrossel__sildes">
-                <img src="/assets/img/semfundoVioloes/baixo_bege.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo-bege">
-                <img src="/assets/img/semfundoVioloes/capa_2.png" alt="capa-2">
-                <img src="/assets/img/semfundoVioloes/capa_bege.png" alt="capa-bege">
-                <img src="/assets/img/semfundoVioloes/capa_bege_2.png" alt="capa-bege-2">
-                <img src="/assets/img/semfundoVioloes/capa_preta_2.png" alt="capa">
-                <img src="/assets/img/semfundoVioloes/guita_subust_2.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/guitarra_subust.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/guitarra_verde.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/violao_bege.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/violao_preto_2.png" alt="baixo-2">
-                <img src="/assets/img/semfundoVioloes/baixo_bege.png" alt="baixo-bege">
-                <img src="/assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo">
-                <img src="/assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo-bege">
-                <img src="/assets/img/semfundoVioloes/capa_2.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/baixo_bege.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo-bege">
+                <img src="assets/img/semfundoVioloes/capa_2.png" alt="capa-2">
+                <img src="assets/img/semfundoVioloes/capa_bege.png" alt="capa-bege">
+                <img src="assets/img/semfundoVioloes/capa_bege_2.png" alt="capa-bege-2">
+                <img src="assets/img/semfundoVioloes/capa_preta_2.png" alt="capa">
+                <img src="assets/img/semfundoVioloes/guita_subust_2.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/guitarra_subust.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/guitarra_verde.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/violao_bege.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/violao_preto_2.png" alt="baixo-2">
+                <img src="assets/img/semfundoVioloes/baixo_bege.png" alt="baixo-bege">
+                <img src="assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo">
+                <img src="assets/img/semfundoVioloes/baixo_bege_2.png" alt="baixo-bege">
+                <img src="assets/img/semfundoVioloes/capa_2.png" alt="baixo">
 
                 <!-- imagens duplicadas -->
 
@@ -112,7 +112,7 @@
         </section>
         <section class="container_fundo__violoes">
             <div class="imagem__violoes">
-                <img src="/assets/img/fundo_violoes.png" alt="fundoVioloes" class="hidden">
+                <img src="assets/img/fundo_violoes.png" alt="fundoVioloes" class="hidden">
             </div>
             <div class="description_violoes">
                 <h1 class="title_violoes"><span>Violões, Guitarras<br>Baixos Elétricos</span></h1>
@@ -131,10 +131,10 @@
             </div>
             <div class="video__loja">
                 <video width="200px" controls class="videos__loja">
-                    <source src="/assets/video/videoLOJA/videoLOJA.mp4" type="video/mp4">
+                    <source src="assets/video/videoLOJA/videoLOJA.mp4" type="video/mp4">
                 </video>
                 <video width="200px" controls class="videos__loja ">
-                    <source src="/assets/video/kadosh.mp4" type="video/mp4">
+                    <source src="assets/video/kadosh.mp4" type="video/mp4">
                 </video>
             </div>
         </section>
@@ -148,18 +148,18 @@
         </div>
         <div class="rodape redes">
             <div class="rede__sociais">
-                <img src="/assets/img/instagram.png" alt="instagram">
+                <img src="assets/img/instagram.png" alt="instagram">
                 <p>pretinho.imports_</p>
             </div>
 
             <div class="rede__sociais">
-                <img src="/assets/img/whatsapp.png" alt="zap">
+                <img src="assets/img/whatsapp.png" alt="zap">
                 <p>(83) 9 9851-1065</p>
             </div>
         </div>
     </footer>
 
-    <script src="/assets/scripts/animationPage.js"></script>
+    <script src="assets/scripts/animationPage.js"></script>
 
 </body>
 
