--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <section class="container__videos hidden">
             <div class="description__loja ">
                 <h3 class="title__videos">Quem somos nós?</h3>
-                <p>A loja Pretinho Imports teve inicio no dia 7 de julho de 2032 mas já
+                <p>A loja Pretinho Imports teve inicio no dia 7 de julho de 2023 mas já
                     era um projeto nascido de um sonho... A pretinho Imports tem como objetivo
                     realizar os seus sonhos, caro cliente amigo...
                 </p>
@@ -143,7 +143,7 @@
     <footer>
         <div class="rodape">
             <p>✍<span class="description__desinger">Desenvolvido por Z-Desinger!</span></p>
-            <p>&copy;Pretinho Imports 2025 - Todos os direitos reservados!
+            <p class="direitos-reservados">&copy;Pretinho Imports 2025 - Todos os direitos reservados!
             </p>
         </div>
         <div class="rodape redes">
